--- a/package.json
+++ b/package.json
@@ -1,18 +1,15 @@
 {
-  "name": "server",
-  "version": "0.0.0",
+  "name": "schooldata_server",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "node app.js"
   },
   "dependencies": {
-    "cookie-parser": "~1.4.4",
-    "cors": "^2.8.6",
-    "debug": "~2.6.9",
-    "express": "~4.16.1",
-    "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
-    "mongodb": "^7.1.0",
-    "morgan": "~1.9.1"
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "mongodb": "^6.5.0",
+    "morgan": "^1.10.0",
+    "cookie-parser": "^1.4.6"
   }
 }
