--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-PORT=5000
-DB_URL=mongodb+srv://admin:<db_password>@student.nnwfjsg.mongodb.net/?appName=Student
+
+DB_URL=DB_URL=mongodb+srv://admin:admin123@student.nnwfjsg.mongodb.net/School?retryWrites=true&w=majority
