--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "node app.js"
+    "start": "node ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.6",
     "express": "^4.18.2",
     "http-errors": "^2.0.1",
-    "mongodb": "^6.5.0",
-    "morgan": "^1.10.0"
+    "mongodb": "^6.3.0",
+    "mongoose": "^7.3.1",
+    "morgan": "^1.10.0"}
   }
-}
