--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 
-DB_URL=mongodb+srv://admin:admin123@student.nnwfjsg.mongodb.net/School?retryWrites=true&w=majority
+DB_URL=mongodb+srv://admin:admin12@schooldata.30cfruw.mongodb.net/?appName=Schooldata
